nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: apibolsa
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: apibolsa
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
